[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme/theme_gray.tres" type="Theme" id=1]
[ext_resource path="res://scene/gui/NewFilterDialog.gd" type="Script" id=2]

[node name="NewFilterDialog" type="WindowDialog"]
margin_right = 600.0
margin_bottom = 600.0
rect_min_size = Vector2( 600, 600 )
theme = ExtResource( 1 )
popup_exclusive = true
window_title = "New Sample Filter"
resizable = true
script = ExtResource( 2 )

[node name="MainMargins" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainVbox" type="VBoxContainer" parent="MainMargins"]
margin_right = 584.0
margin_bottom = 584.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label5" type="Label" parent="MainMargins/MainVbox"]
margin_right = 584.0
margin_bottom = 21.0
text = "Filter Name:"

[node name="FilterNameEdit" type="LineEdit" parent="MainMargins/MainVbox"]
margin_top = 25.0
margin_right = 584.0
margin_bottom = 56.0
text = "New Filter"
caret_blink = true
caret_blink_speed = 0.5

[node name="HSeparator4" type="HSeparator" parent="MainMargins/MainVbox"]
margin_top = 60.0
margin_right = 584.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainMargins/MainVbox"]
margin_top = 80.0
margin_right = 584.0
margin_bottom = 101.0
text = "Filter Expression:"

[node name="ExpressionEdit" type="LineEdit" parent="MainMargins/MainVbox"]
margin_top = 105.0
margin_right = 584.0
margin_bottom = 136.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
clear_button_enabled = true
caret_blink = true
caret_blink_speed = 0.5

[node name="Label3" type="Label" parent="MainMargins/MainVbox"]
margin_top = 140.0
margin_right = 584.0
margin_bottom = 161.0
text = "Valid Operators: +, -, *, /, ==, !=, <, >, <=, >=, and, or, not, (, )"

[node name="HSeparator" type="HSeparator" parent="MainMargins/MainVbox"]
margin_top = 165.0
margin_right = 584.0
margin_bottom = 181.0
rect_min_size = Vector2( 0, 16 )

[node name="Label2" type="Label" parent="MainMargins/MainVbox"]
margin_top = 185.0
margin_right = 584.0
margin_bottom = 206.0
text = "Insert Attribute Ref:"

[node name="AttributeItemList" type="ItemList" parent="MainMargins/MainVbox"]
margin_top = 210.0
margin_right = 584.0
margin_bottom = 359.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="InsertAttribHbox" type="HBoxContainer" parent="MainMargins/MainVbox"]
margin_top = 363.0
margin_right = 584.0
margin_bottom = 390.0
alignment = 1

[node name="InsertAttributeBtn" type="Button" parent="MainMargins/MainVbox/InsertAttribHbox"]
margin_left = 215.0
margin_right = 369.0
margin_bottom = 27.0
text = "Insert At Cursor"

[node name="HSeparator2" type="HSeparator" parent="MainMargins/MainVbox"]
margin_top = 394.0
margin_right = 584.0
margin_bottom = 404.0
rect_min_size = Vector2( 0, 10 )

[node name="Label4" type="Label" parent="MainMargins/MainVbox"]
margin_top = 408.0
margin_right = 584.0
margin_bottom = 429.0
text = "Insert Class Prediction:"

[node name="ClassItemList" type="ItemList" parent="MainMargins/MainVbox"]
margin_top = 433.0
margin_right = 584.0
margin_bottom = 507.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InsertClassHbox" type="HBoxContainer" parent="MainMargins/MainVbox"]
margin_top = 511.0
margin_right = 584.0
margin_bottom = 538.0
alignment = 1

[node name="InsertClassBtn" type="Button" parent="MainMargins/MainVbox/InsertClassHbox"]
margin_left = 215.0
margin_right = 369.0
margin_bottom = 27.0
text = "Insert At Cursor"

[node name="HSeparator3" type="HSeparator" parent="MainMargins/MainVbox"]
margin_top = 542.0
margin_right = 584.0
margin_bottom = 552.0
rect_min_size = Vector2( 0, 10 )

[node name="BottomBtnBar" type="HBoxContainer" parent="MainMargins/MainVbox"]
margin_top = 556.0
margin_right = 584.0
margin_bottom = 583.0
alignment = 2

[node name="OkayBtn" type="Button" parent="MainMargins/MainVbox/BottomBtnBar"]
margin_left = 448.0
margin_right = 507.0
margin_bottom = 27.0
text = "Okay"

[node name="CancelBtn" type="Button" parent="MainMargins/MainVbox/BottomBtnBar"]
margin_left = 511.0
margin_right = 584.0
margin_bottom = 27.0
text = "Cancel"
[connection signal="about_to_show" from="." to="." method="_on_NewFilterDialog_about_to_show"]
[connection signal="pressed" from="MainMargins/MainVbox/InsertAttribHbox/InsertAttributeBtn" to="." method="_on_InsertAttributeBtn_pressed"]
[connection signal="pressed" from="MainMargins/MainVbox/InsertClassHbox/InsertClassBtn" to="." method="_on_InsertClassBtn_pressed"]
[connection signal="pressed" from="MainMargins/MainVbox/BottomBtnBar/OkayBtn" to="." method="_on_OkayBtn_pressed"]
[connection signal="pressed" from="MainMargins/MainVbox/BottomBtnBar/CancelBtn" to="." method="_on_CancelBtn_pressed"]
